--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "queskify",
+  "author": {
+    "name": "Firdavs Gafurjonov",
+    "email": "firdavs.gafurjonov@gmail.com"
+  },
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
