--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "cross-env": "^7.0.3",
     "husky": "^8.0.2",
     "prettier": "^2.7.1"
   }
